--- a/魏慎行自动化64_2160504103.md
+++ b/魏慎行自动化64_2160504103.md
@@ -95,7 +95,7 @@ ans =
   （2）UnMask：  
   将图像模糊部分去除后进行图像增强  
     结果如下：  
-    ![UnMask](UnMask.png)
+    ![Unmask](UnMask.png)
 
 **比较分析：**  
 由于拉普拉斯滤波器将原始图像完全加入到滤波结果中，因此解决了零频率成分问题，图像背景的平均强度增加、变亮。但是也引入了噪声信息，使图像出现了一定程度的失真。  
